public abstract class Comparador {
    public abstract boolean comparar(int v1, int v2);

    public abstract boolean comparar(double v1, double v2);
}
